# aegis

./: .env.example  .env.test  .gitignore  CLAUDE.md  CONTRIBUTING.md  DUPLICATE_QUESTIONS_FIX.md  E2E_TEST_SUMMARY.md  FORMATTER_IMPLEMENTATION_SUMMARY.md  ORCHESTRATOR_DISPLAY_FIX.md  ORCHESTRATOR_STATUS.md  PLAN_PROMPT_COMPARISON.md  PRIORITIZATION_IMPLEMENTATION_SUMMARY.md  PROJECT_CREATION_FEATURE.md  PROJECT_STRUCTURE.md  QUESTION_AUTO_COMPLETE_SUMMARY.md  README.md  REFACTOR_PLAN.md  SECURITY.md  SHUTDOWN_IMPLEMENTATION_SUMMARY.md  TASK_COMPLETION_REPORT.md  TOOLS.md  alembic.ini  design.md  docker-compose.yml  inspect_asana.py  migration_plan.md  pyproject.toml  summary.md  swarm_memory.md  swarm_state.json  test_migration.py  user_preferences.md
.claude/: settings.json
.claude/hooks/: log-session.sh
.github/: MERGE_QUEUE_SETUP.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETTINGS.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  integration-tests.yml  integration-tests.yml.example
_deprecated/: agent_client.py  cli_old.py  prioritizer.py
alembic/: env.py
alembic/versions/: 22bba2d16585_initial_schema_system_state_task_.py
design/: AUTONOMOUS_WORK_PATTERN.md  DATABASE_SCHEMA.md  ORCHESTRATION.md  PROJECT_OVERVIEW.md  TASK_LIST.md
design_docs/: dashboard_ux.md
docs/: AGENT_COMMAND.md  DASHBOARD_TESTING.md  OPERATOR_GUIDE.md  PRIORITIZATION.md  QUESTION_AUTO_COMPLETE.md  SETUP_GUIDE.md  SHUTDOWN_HANDLING.md  aegis_config.json  test_log_files.py
docs/architecture/: LLM_ARCHITECTURE.md  NEW_ARCHITECTURE_SUMMARY.md  README.md  REFACTOR_COMPLETE.md  design.md
docs/fixes/: AGENT_SERVICE_STARTUP_FIX.md  README.md
docs/implementation/: CLAUDE_CLI_LOGGING_IMPLEMENTATION.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_INTEGRATION_TEST_COMPLETION_REPORT.md  ORCHESTRATOR_COMPLETION_REPORT.md  ORCHESTRATOR_IMPLEMENTATION_COMPLETE.md  ORCHESTRATOR_IMPLEMENTATION_SUMMARY.md  PLAN_COMMAND_IMPLEMENTATION_SUMMARY.md  PLAN_COMMAND_IMPROVEMENTS.md  README.md  SIMPLE_EXECUTOR_IMPLEMENTATION_SUMMARY.md  SYNC_IMPLEMENTATION_SUMMARY.md  TASK_PRIORITIZATION_COMPLETION_REPORT.md  WEB_DASHBOARD_IMPLEMENTATION.md
examples/: README.md  formatter_usage.py  prioritization_example.py  simple_executor_usage.py
prompts/: README.md  documentation.md  merger.md  planner.md  planner.prompt.txt  reviewer.md  reviewer.prompt.txt  triage.md  worker.md  worker.prompt.txt
schema/: asana_config.json
scripts/: add_project_to_portfolio.py  add_projects_to_portfolio.py  cleanup_test_tasks.py  complete_task.py  create_project.py  list_workspace_projects.py  populate_prompt_templates.py  populate_tasks.py  setup_asana.py  setup_test_env.sh  test_prompts.py  track_aegis.py  track_agents.py  uncomplete_failed_tasks.py
src/Test Project 5/: __init__.py  main.py
src/aegis/: __init__.py  agent_helpers.py  cli.py  config.py
src/aegis/agents/: README.md  SIMPLE_EXECUTOR.md  __init__.py  agent_service.py  base.py  consolidator.py  documentation.py  formatters.py  ideation.py  merger.py  planner.py  prompts.py  refactor.py  reviewer.py  simple_executor.py  syncer.py  (+2 more)
tests/: __init__.py  conftest.py  debug_dashboard_data.py  manual_shutdown_test.py  test_cli_agent.py  test_main.py  test_master_integration.py  verify_dashboard_data.py
tests/agents/: conftest.py  test_blocker_handling.py  test_triage_agent.py  utils.py
tests/integration/: E2E_STATUS.md  E2E_TEST_GUIDE.md  QUICK_START.md  README.md  TEST_SUMMARY.md  __init__.py  test_e2e.py
tests/unit/: __init__.py  test_asana_client.py  test_asana_models.py  test_asana_service_custom_fields.py  test_config.py  test_crud.py  test_formatters.py  test_orchestrator.py  test_prioritizer.py  test_shutdown.py  test_simple_executor.py
tools/: inspect_custom_fields.py  setup_asana_custom_fields.py  setup_github_project.py  sync_asana_project.py  sync_asana_sections.py
(+32 files in other folders)
