[project]
name = "aegis"
version = "0.1.0"
description = "A new project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "watchdog>=4.0.0",
    "click>=8.0.0",
    "structlog>=24.1.0",
    "ray>=2.9.0",
    "rich>=13.0.0",
    "asana>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.18.0",
    "tenacity>=8.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: mark test as integration test",
    "asyncio: mark test as asyncio test",
]
